# Tese

./: .gitignore  README.md  UAV_Object_Detection_Research_Paper.tex
Code/AllYolosPython/: CHANGELOG.md  LICENSE  Makefile  ORGANIZATION.md  README.md  pyproject.toml  requirements.txt  steps.md
Code/AllYolosPython/config/: default.yaml  high_performance.yaml  quality.yaml
Code/AllYolosPython/docs/: README.md  development_log.md  installation_guide.md  performance_optimization.md  troubleshooting.md
Code/AllYolosPython/models/: models_info.md  quantized_models_info.txt
Code/AllYolosPython/notebooks/: model_fine_tuning_export.ipynb
Code/AllYolosPython/requirements/: requirements_no_realsense.txt  requirements_pi5.txt
Code/AllYolosPython/scripts/: benchmark.sh  cleanup.sh  download_models.py  fix_realsense_venv.sh  multi_model_benchmark.sh  setup.sh  setup_realsense.sh  system_check.sh
Code/AllYolosPython/src/: camera.py  detector.py  high_performance_viewer.py  main.py  mock_camera.py  web_viewer.py
Code/AllYolosPython/tests/: test_fps.py
Code/ROS_UAV_Detection/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.sh
Code/ROS_UAV_Detection/config/: default_params.yaml  high_performance.yaml  high_quality.yaml
Code/ROS_UAV_Detection/launch/: camera_only.launch.py  uav_detection.launch.py
Code/ROS_UAV_Detection/msg/: Detection.msg  DetectionArray.msg
Code/ROS_UAV_Detection/src/: camera_node.py  detector_node.py  visualization_node.py
