<?xml version="1.0"?>
<package format="3">
  <name>uav_object_detection</name>
  <version>1.0.0</version>
  <description>UAV Object Detection using YOLO models with RealSense camera</description>
  
  <maintainer email="your.email@example.com">FRCTavares</maintainer>
  
  <license>MIT</license>
  
  <url type="website">https://github.com/FRCTavares/Tese</url>
  <url type="bugtracker">https://github.com/FRCTavares/Tese/issues</url>
  <url type="repository">https://github.com/FRCTavares/Tese</url>
  
  <author email="your.email@example.com">FRCTavares</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  
  <!-- Vision and AI dependencies -->
  <depend>vision_msgs</depend>
  
  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
